<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvWelcome"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/viewLoginDriver"
        app:layout_constraintStart_toEndOf="@id/ivLogin"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/enter_login_here"
        android:inputType="textPersonName"
        android:minHeight="35dp"
        android:textColorHint="@color/colorTextHint"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewLoginDriver"
        app:layout_constraintStart_toEndOf="@id/ivLogin"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        tools:ignor="Autofill" />

    <View
        android:id="@+id/viewLoginDriver"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@+id/etLogin" />

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_icon"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/viewLoginDriver"
        app:layout_constraintStart_toStartOf="@id/viewLoginDriver"
        app:layout_constraintTop_toTopOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/viewLoginDriver"
        app:layout_constraintStart_toEndOf="@id/ivLogin"
        app:layout_constraintTop_toBottomOf="@id/viewLoginDriver" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"
        android:minHeight="35dp"
        android:textColorHint="@color/colorTextHint"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewLoginDriver"
        app:layout_constraintStart_toEndOf="@id/ivLogin"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        tools:ignor="Autofill" />

    <ImageView
        android:id="@+id/ivPassword"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/password_icon"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/viewPasswordDriver"
        app:layout_constraintStart_toStartOf="@id/viewLoginDriver"
        app:layout_constraintTop_toTopOf="@id/etPassword" />

    <View
        android:id="@+id/viewPasswordDriver"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    <Button
        android:id="@+id/btnSignOn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/viewPasswordDriver" />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnSignOn" />


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>